--- a/src/styles/colorFont.scss
+++ b/src/styles/colorFont.scss
@@ -3,13 +3,37 @@
 $backgroundColor: #17181b;
 $primaryColor: #fff;
 $secondaryColor: #deb90c;
+$thirdColor: #2d2d2d;
 
+a:link{text-decoration:none}
 
 body {
     background-color:  $backgroundColor;
 }
 
 .regularFont {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 1.3em;
+    color: $primaryColor;
+}
+
+.regularFontScndColor {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 1em;
+    color: $secondaryColor;
+}
+
+.regularFontItalic {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 1em;
+    font-style: italic;
+    color: $primaryColor;
+}
+
+.regularFontOverviewEpisode {
     font-family: 'Roboto', sans-serif;
     font-weight: 400;
     font-size: 1em;
@@ -27,7 +51,7 @@ body {
     font-family:'Roboto', sans-serif;
     font-weight:300;
     color:$primaryColor;
-    font-size : 1.1em;
+    font-size : 1.2em;
 }
 
 .synopsisFont {
@@ -63,6 +87,13 @@ h4 {
 
 .seasonNumberFont {
     font-size:1.3em;
+}
+
+.fontEpisodeTvSerie  a {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 700;
+    text-transform: uppercase;
+    font-size:1.9em;
 }
 
 
