--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -28,7 +28,7 @@
                 <br/><br/><br/><br/>
                 <div class="user">
                     <img class="user-img" src="images/placeholder.png"/>
-                    <div class="user-name">User Name</div>
+                    <div class="user-name">{{user}}</div>
                 </div>
             </nav>
         </div>
