--- a/src/movies/views/movie.html
+++ b/src/movies/views/movie.html
@@ -18,7 +18,7 @@
                 <br/><br/><br/>
                 <div class="user">
                     <img class="user-img" src="images/placeholder.png"/>
-                    <div class="user-name">User Name</div>
+                    <div class="user-name">{{user.email}}</div>
                 </div>
 
             </nav>
@@ -48,8 +48,8 @@
 
             <div class="posterContentTvMovie">
 
-              <img ng-if="movie.poster_path!=null" src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail" ng-click="showMovie(movie.id)">
-              <img ng-if="movie.poster_path==null" src="http://image.eiga.k-img.com/images/buzz/29346/darthvader.jpg" class="image-thumbnail" ng-click="showMovie(movie.id)">
+              <img ng-if="movie.poster_path!=null" src="http://image.tmdb.org/t/p/w500{{movie.poster_path}}" class="image-thumbnail">
+              <img ng-if="movie.poster_path==null" src="http://image.eiga.k-img.com/images/buzz/29346/darthvader.jpg" class="image-thumbnail">
 
             </div>
 
@@ -85,7 +85,7 @@
 
         </div>
             <div class="userActionMovie clearfix">
-                    <a href = "#"><div class="favoriteAdd fontRegular">Ajouter aux favoris</div></a>
+                    <a href = ""><div class="favoriteAdd fontRegular" ng-click="addFavoris(movie.id.id)">Ajouter aux favoris</div></a>
                     <a href = "#"><div class="reloadMovie fontRegular">Reprendre la lecture</div></a>
                 </div>
 
