Ajout icône Fav et bouton loader scroll

--- a/src/movies/views/player.html
+++ b/src/movies/views/player.html
@@ -51,7 +51,7 @@
 <!-- Fin menu à gauche qui slide -->
 <section class="player">
 
-  <video id="video-ba" class="video-js vjs-default-skin"
+  <!-- <video id="video-ba" class="video-js vjs-default-skin"
     controls preload="auto" width="" height=""
     poster="http://video-js.zencoder.com/oceans-clip.png"
     data-setup='{"example_option":true}'>
@@ -59,7 +59,13 @@
    <source src="http://video-js.zencoder.com/oceans-clip.webm" type='video/webm' />
    <source src="http://video-js.zencoder.com/oceans-clip.ogv" type='video/ogg' />
    <p class="vjs-no-js">To view this video please enable JavaScript, and consider upgrading to a web browser that <a href="http://videojs.com/html5-video-support/" target="_blank">supports HTML5 video</a></p>
-  </video>
+  </video> -->
+
+  <video width="320" height="240" controls>
+  <source src="movie.mp4" type="video/mp4">
+  <source src="movie.ogg" type="video/ogg">
+Your browser does not support the video tag.
+</video>
 
   <div class="slider">
 
