--- a/src/movies/views/series.html
+++ b/src/movies/views/series.html
@@ -56,7 +56,7 @@
                     <h2 class="title-home">{{serie.name | limitTo:20}}</h2>
                     <!-- <p>original_name : {{serie.original_name}}</p>
                     <p>id : {{serie.id}}</p>  -->
-                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>
+                    <div ng-click="addFavoris(serie.id)" style="cursor:pointer;" class="favoriteAdd fontRegular coeurNote"></div><h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>
                     <!-- <p>first_air_date : {{serie.first_air_date}}</p>
                     <p>origin_country : {{serie.origin_country}}</p>
                     <p>popularity : {{serie.popularity}}</p>
@@ -85,7 +85,7 @@
                     <!-- <h3>name : {{serie.name}}</h3>
                     <p>original_name : {{serie.original_name}}</p>
                     <p>id : {{serie.id}}</p>   -->
-                    <h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>
+                    <div ng-click="addFavoris(serie.id)" style="cursor:pointer;" class="favoriteAdd fontRegular coeurNote"></div><h4 class"title-details">{{serie.first_air_date | limitTo:4}}</h4>
                     <!-- <p>first_air_date : {{serie.first_air_date}}</p>
                     <p>origin_country : {{serie.origin_country}}</p>
                     <p>popularity : {{serie.popularity}}</p>
