--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -191,13 +191,9 @@
                         <p>genre_ids : <ul><li ng-repeat="(key, genre) in movie.genre_ids">{{genre}} (traité TpH : {{ genreList[genre] }} )</li></ul></p>
                         <p>vote_average : {{movie.vote_average}}</p>
                         <p>original_language : {{movie.original_language}}</p> -->
-<<<<<<< HEAD
-                        <div class="favoriteAdd fontRegular coeurNote"></div><h4 class"title-details">{{movie.release_date | limitTo:4}}</h4>
 
-=======
                         <div class="favoriteAdd fontRegular coeurNote" ng-click="addFavoris(movie.id)" style="cursor:pointer;"></div><h4 class"title-details">{{movie.release_date | limitTo:4}}</h4>
                         
->>>>>>> c84b9dd89a57876921b26d06975f38380e01b62d
                        <!--  <p>overview : {{movie.overview}}</p>
                         <p>popularity : {{movie.popularity}}</p>
                         <p>video : {{movie.video}}</p>
@@ -229,7 +225,7 @@
                         <p>genre_ids : <ul><li ng-repeat="(key, genre) in movie.genre_ids">{{genre}} (traité TpH : {{ genreList[genre] }} )</li></ul></p>
                         <p>vote_average : {{movie.vote_average}}</p>
                         <p>original_language : {{movie.original_language}}</p> -->
-                         <h4 class"title-details">{{movie.release_date | limitTo:4}}</h4>
+                           <div class="favoriteAdd fontRegular coeurNote" ng-click="addFavoris(movie.id)" style="cursor:pointer;"></div><h4 class"title-details">{{movie.release_date | limitTo:4}}</h4>
                        <!--  <p>overview : {{movie.overview}}</p>
                         <p>popularity : {{movie.popularity}}</p>
                         <p>video : {{movie.video}}</p>
