--- a/src/movies/views/movies.html
+++ b/src/movies/views/movies.html
@@ -29,7 +29,7 @@
                 <br/><br/><br/>
                 <div class="search">
                     <input  class="btn" style="width:92%"
-                        ng-change="search(searchValue)"
+                        ng-change="search(searchValue,1)"
                         ng-model="searchValue" type="search">
                 </div>
                 <br/><br/><br/><br/>
