--- a/src/movies/views/profil.html
+++ b/src/movies/views/profil.html
@@ -22,7 +22,7 @@
 
 							<div class="thumb-fav" ng-repeat="movie in favorismovie">
 
-								<a href="#/movie/{{movie}}">{{movies[movie].title}}
+								<a href="#/movie/{{movie}}"><h1>{{movies[movie].title}}</h1>
 								<img src="http://image.tmdb.org/t/p/w185{{movies[movie].poster_path}}"></a>
 							</div>
 
